Version beta 0.01 Waiting for validations and tests :smile:
