# src/lib/modules/project/main.model.ts
@@ -1,0 +1,6 @@
+import {Database} from "../../../utils/generic/context";
+
+export const Project = Database.project
+export const Comment = Database.comment
+export const Post = Database.post
+export const Category = Database.category
